--- a/index.html
+++ b/index.html
@@ -48,6 +48,30 @@
         Codepen
       </a>
     </div>
+    <div class='swanky_title__social'>
+      <a href='https://github.com/hogawa1216' target='_blank'>
+        <div class='slide'>
+          <div class='arrow'>
+            <div class='stem'></div>
+            <div class='point'></div>
+          </div>
+        </div>
+        <img src='./icon/github.png'>
+        github
+      </a>
+    </div>
+    <div class='swanky_title__social'>
+      <a href='https://sub0000497806.hmk-temp.com/login' target='_blank'>
+        <div class='slide'>
+          <div class='arrow'>
+            <div class='stem'></div>
+            <div class='point'></div>
+          </div>
+        </div>
+        <img src='./icon/pw.png'>
+        PMC
+      </a>
+    </div>
   </div>
   <!-- /////////// Begin Dropdown //////////// -->
   <div class='swanky_wrapper'>
@@ -61,8 +85,8 @@
         <ul>
           <li><a href='./chart.html' target='_blank'>AssetRepo</a></li>
           <li><a href='./chartSum.html' target='_blank'>AssetRepoSum</a></li>
-          <li><a href='https://sub0000497806.hmk-temp.com/login' target='_blank'>PaswordManagerCloud</a></li>
-          <li><a href='https://github.com/hogawa1216/test/tree/master' target='_blank'>github</a></li>
+          <li></li>
+          <li></li>
         </ul>
       </div>
     </label>
