--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 function getCSV(){
     var req = new XMLHttpRequest();
     req.open("get", "test.csv", true);
-    req.overrideMimeType('text/plain; charset=Shift_JIS');
+    req.overrideMimeType('text/plain; charset=UTF-8');
     req.send(null);
 
     req.onload = function(){
