--- a/chart.html
+++ b/chart.html
@@ -10,6 +10,34 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
   <script>
   var ctx = document.getElementById("myBarChart");
+  
+  
+  function getCSV(){
+      var req = new XMLHttpRequest();
+      req.open("get", "test.csv", true);
+      req.overrideMimeType('text/plain; charset=UTF-8');
+      req.send(null);
+
+      req.onload = function(){
+      convertCSVtoArray(req.responseText);
+    }
+  }
+
+  function convertCSVtoArray(str){
+      var tmp = str.split("\n");
+      var result = []; 
+      // 各行ごとにカンマで区切った文字列を要素とした二次元配列を生成
+      for(var i=0;i<tmp.length;++i){
+        result[i] = tmp[i].split(',');
+      }
+      alert(result[1][2]);
+  }
+  getCSV();
+  
+  
+  
+  
+  
   var myBarChart = new Chart(ctx, {
     type: 'bar',
     data: {
