--- a/chart.html
+++ b/chart.html
@@ -26,6 +26,7 @@
   function convertCSVtoArray(str){
       var tmp = str.split("\n");
       var result = []; 
+      alert("1");
       // 各行ごとにカンマで区切った文字列を要素とした二次元配列を生成
       for(var i=0;i<tmp.length;++i){
         result[i] = tmp[i].split(',');
