--- a/chart.html
+++ b/chart.html
@@ -21,7 +21,7 @@
   }
 
   function convertCSVtoArray(str){
-      var tmp = str.split(",");
+      var tmp = str.split("\r\n");
       var result = []; 
       alert("1");
           var tmp = str.split(",");
