--- a/chart.html
+++ b/chart.html
@@ -25,7 +25,7 @@
       var result = []; 
       alert("1");
           var tmp = str.split(",");
-    alert("データ1："+tmp[0]+"データ2："+tmp[1]+"データ3："+tmp[2]);
+    alert("データ1："+tmp[0]]);
       // 各行ごとにカンマで区切った文字列を要素とした二次元配列を生成
       //for(var i=0;i<tmp.length;++i){
        //alert(tmp[i]);
