--- a/chart.html
+++ b/chart.html
@@ -44,7 +44,7 @@
       datasets: [
         {
           label: '三菱UFJ銀行',
-          data: [280, 285, 290, 295, 300, 305, 400],
+          data: [tmp[0]],
           backgroundColor: "rgba(219,39,91,0.5)"
         },{
           label: '東京信用金庫',
