--- a/chart.html
+++ b/chart.html
@@ -21,12 +21,13 @@
   }
 
   function convertCSVtoArray(str){
-      var tmp = str.split("\r\n");
+      tmp = str.split("\r\n");
       // 各行ごとにカンマで区切った文字列を要素とした二次元配列を生成
       //for(var i=0;i<tmp.length;++i){
        //alert(tmp[i]);
       //}
   }
+  var tmp;
   getCSV();
   </script>
   
