--- a/chart.html
+++ b/chart.html
@@ -24,7 +24,8 @@
       var tmp = str.split("\r\n");
       var result = []; 
       alert("1");
-
+          var tmp = str.split(",");
+    alert("データ1："+tmp[0]]);
       // 各行ごとにカンマで区切った文字列を要素とした二次元配列を生成
       //for(var i=0;i<tmp.length;++i){
        //alert(tmp[i]);
@@ -43,7 +44,7 @@
       datasets: [
         {
           label: '三菱UFJ銀行',
-          data: [40, 45, 50, 55, 60, 65, 70],
+          data: [280, 285, 290, 295, 300, 305, 400],
           backgroundColor: "rgba(219,39,91,0.5)"
         },{
           label: '東京信用金庫',
