--- a/chart.html
+++ b/chart.html
@@ -9,6 +9,7 @@
   <canvas id="myBarChart"></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
   <script>
+  var tmp;
     function getCSV(){
       var req = new XMLHttpRequest();
       req.open("get", "test.csv", true);
@@ -21,7 +22,7 @@
   }
 
   function convertCSVtoArray(str){
-      var tmp = str.split("\r\n");
+      tmp = str.split("\r\n");
       var result = []; 
       alert("1");
   }
