--- a/chart.html
+++ b/chart.html
@@ -39,7 +39,7 @@
       datasets: [
         {
           label: '三菱UFJ銀行',
-          data: [tmp[0]],
+          data: tmp[0],
           backgroundColor: "rgba(219,39,91,0.5)"
         },{
           label: '東京信用金庫',
