--- a/chart.html
+++ b/chart.html
@@ -48,7 +48,7 @@
       datasets: [
         {
           label: '三菱UFJ銀行',
-          data: tmp[0],
+          data: csvData,
           backgroundColor: "rgba(219,39,91,0.5)"
         },{
           label: '東京信用金庫',
