--- a/chart.html
+++ b/chart.html
@@ -48,11 +48,11 @@
       datasets: [
         {
           label: '三菱UFJ銀行',
-          data: csvData,
+          data: csvData[0],
           backgroundColor: "rgba(219,39,91,0.5)"
         },{
           label: '東京信用金庫',
-          data: [csvData],
+          data: csvData,
           backgroundColor: "rgba(130,201,169,0.5)"
         },{
           label: 'SBI',
