--- a/chart.html
+++ b/chart.html
@@ -46,7 +46,7 @@
       datasets: [
         {
           label: '三菱UFJ銀行',
-          data: csvData[0][0],
+          data: csvData[0],
           backgroundColor: "rgba(219,39,91,0.5)"
         },{
           label: '東京信用金庫',
