--- a/chart.html
+++ b/chart.html
@@ -11,7 +11,7 @@
   <script>
 function csv2Array(str) {
   var csvData = [];
-  var lines = str.split("\n");
+  var lines = str.split("\r\n");
   for (var i = 0; i < lines.length; ++i) {
     var cells = lines[i].split(",");
     csvData.push(cells);
@@ -43,6 +43,8 @@ function drawBarChart(data) {
 }
 
 main();
+
+
   </script>
 </body>
 </html>
