--- a/chart.html
+++ b/chart.html
@@ -36,7 +36,7 @@ function drawBarChart(data) {
   }
 
   // 4)chart.jsで描画
-  var ctx = document.getElementById("myChart").getContext("2d");
+  var ctx = document.getElementById("myBarChart").getContext("2d");
   var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
