--- a/chartSum.html
+++ b/chartSum.html
@@ -32,7 +32,7 @@
   var myBarChart = new Chart(ctx, {
     type: 'bar',
     data: {
-      labels csvData[0],
+      labels: csvData[0],
       datasets: [
         {
           label: '三菱UFJ銀行',
