--- a/chartSumba.html
+++ b/chartSumba.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-　<title>資産</title> 
+  <title>資産</title> 
 </head>
 <body>
   <h1>資産</h1>
@@ -28,61 +28,56 @@
       var cells = lines[i].split(",");
       csvData.push(cells);
     }
-    var ctx = document.getElementById("myBarChart");
-
-    var myBarChart = new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels: csvData[0],
-        datasets: [
-          {
-            label: '三菱UFJ銀行',
-            data: csvData[1],
-            backgroundColor: "rgba(219,39,91,0.5)"
-          },{
-            label: '東京信用金庫',
-            data: csvData[2],
-            backgroundColor: "rgba(130,201,169,0.5)"
-          },{
-            label: 'SBI',
-            data: csvData[3],
-            backgroundColor: "rgba(255,183,76,0.5)"
-          },{
-            label: '明治安田',
-            data: csvData[4],
-            backgroundColor: "rgba(147,15,255,0.4)"
-          }
-        ]
+  var ctx = document.getElementById("myBarChart");
+  var myBarChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: csvData[0],
+      datasets: [
+        {
+          label: '三菱UFJ銀行',
+          data: csvData[1];
+          backgroundColor: "rgba(219,39,91,0.5)"
+        },{
+          label: '東京信用金庫',
+          data: csvData[2];
+          backgroundColor: "rgba(130,201,169,0.5)"
+        },{
+          label: 'SBI',
+          data: csvData[3];
+          backgroundColor: "rgba(255,183,76,0.5)"
+        },{
+          label: '明治安田',
+          data: csvData[4];
+          backgroundColor: "rgba(147,15,255,0.4)"
+        }
+      ]
+    },
+    options: {
+      title: {
+        display: true,
+        text: '口座合算'
       },
-      options: {
-        title: {
-          display: true,
-          text: '口座合算''
-        },
-        scales: {
+      scales: {
          xAxes:[{
           stacked: true
         }],
-          yAxes: [{
-          stacked: true,
+        yAxes: [{
+                    stacked: true,
           ticks: {
             suggestedMax: 100,
             suggestedMin: 0,
             stepSize: 100,
             callback: function(value, index, values){
               return  value +  '万円'
-              }
             }
-          }]
-        },
-      }
-    });
-  }
-  
-  
-  
-  
-  getCSV();
+          }
+        }]
+      },
+    }
+  });
+}
+getCSV();
   </script>
 </body>
 </html>
