--- a/chartSum.html
+++ b/chartSum.html
@@ -57,7 +57,7 @@
       options: {
         title: {
           display: true,
-          text: '口座合算''
+          text: '口座合算'
         },
         scales: {
          xAxes:[{
