--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <ul>
           <li><a href='./chart.html' target='_blank'>AssetRepo</a></li>
           <li><a href='./chartSum.html' target='_blank'>AssetRepoSum</a></li>
-          <li></li>
+          <li><a href='./test.html' target='_blank'>AssetRepoSum</a></li>
           <li></li>
         </ul>
       </div>
