--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class='bar'></div>
       <div class='swanky_wrapper__content'>
         <ul>
-          <li>Inbox</li>
+          <li><a href="https://discord.com/"  target="_blank">Discord</a></li>
           <li>Outbox</li>
           <li>Sent</li>
           <li>Archived</li>
