--- a/index.html
+++ b/index.html
@@ -113,10 +113,9 @@
       <div class='bar'></div>
       <div class='swanky_wrapper__content'>
         <ul>
-          <li><a href="https://discord.com/"  target="_blank">Discord</a></li>
-          <li>Outbox</li>
-          <li>Sent</li>
-          <li>Archived</li>
+          <li><a href="https://discord.com/channels/@me"  target="_blank">Discord</a></li>
+          <li><a href="https://app.slack.com/client/THW01N1B5/CJ7CEU9QD"  target="_blank">Slack</a></li>
+          <li><a href="https://line.me/ja/"  target="_blank">Line</a></li>
         </ul>
       </div>
     </label>
