--- a/index.html
+++ b/index.html
@@ -98,10 +98,7 @@
       <div class='bar'></div>
       <div class='swanky_wrapper__content'>
         <ul>
-          <li>New Sales</li>
-          <li>Expired Sales</li>
-          <li>Sales Reports</li>
-          <li>Deliveries</li>
+          <li><a href="https://www.amazon.co.jp/"  target="_blank">amazon</a></li>
         </ul>
       </div>
     </label>
