--- a/index.html
+++ b/index.html
@@ -73,6 +73,32 @@
       </a>
     </div>
   </div>
+  <div class='swanky_title__social'>
+    <a href='https://www.qbook.jp/' target='_blank'>
+      <div class='slide'>
+        <div class='arrow'>
+          <div class='stem'></div>
+          <div class='point'></div>
+        </div>
+      </div>
+       <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/cp.png'>
+      Qbook
+    </a>
+    </div>
+  </div>
+  <div class='swanky_title__social'>
+    <a href='http://www.sakutyuu.com/technology/' target='_blank'>
+      <div class='slide'>
+        <div class='arrow'>
+          <div class='stem'></div>
+          <div class='point'></div>
+        </div>
+      </div>
+      <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/cp.png'>
+      技術的なこと、あれこれ
+    </a>
+    </div>
+  </div>
   <!-- /////////// Begin Dropdown //////////// -->
   <div class='swanky_wrapper'>
     <input id='Dashboard' name='radio' type='radio'>
